fix(widget): round profile avatar not centered

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -127,6 +127,8 @@ img.thumbnail
         margin-right: 0
     .menu-list a.level
         display: flex
+    .has-text-centered figure.image
+        margin: auto
 
 .pagination
     .pagination-link:not(.is-current), .pagination-previous, .pagination-next
